--- a/src/java/org/apache/log4j/test/witness/getOptions.1
+++ b/src/java/org/apache/log4j/test/witness/getOptions.1
@@ -1,8 +1,9 @@
-log4j.appender.f=org.apache.log4j.FileAppender
-log4j.appender.f.ImmediateFlush=true
-log4j.appender.f.File=temp
 log4j.appender.f.Append=false
-log4j.appender.f.layout=org.apache.log4j.PatternLayout
+log4j.appender.f.File=temp
+log4j.appender.f.ImmediateFlush=true
+log4j.appender.f.layout.ContentType=text/plain
 log4j.appender.f.layout.ConversionPattern=%m%n
-log4j.rootCategory=DEBUG, f
+log4j.appender.f.layout=org.apache.log4j.PatternLayout
+log4j.appender.f=org.apache.log4j.FileAppender
 log4j.category.org.apache.log4j=INFO, f
+log4j.rootCategory=DEBUG, f
