--- a/docs/HISTORY
+++ b/docs/HISTORY
@@ -10,11 +10,14 @@
 
  - Release of version 1.1b5
  
- - Corrected a performance bug in LocationInfo. [*]
+ - Corrected an important performance bug in LocationInfo. Hein Couwet
+   and kr@it-practice.dk have independently identified the bug. This is
+   yet another example of the fact that the number of eyeballs
+   studying code makes a difference. [*]
 
  - Corrected the incorrect value returned by LocationInfo.getClassName
-   method when running under Visual Age. Thanks to Mathias Rupprecht
-   for supplying the relevant patch. [*]
+   method when running under IBM Visual Age. Thanks to Mathias
+   Rupprecht for supplying the relevant patch. [*]
  
  - Corrected a bug where the build.sh file in the distribution would be in 
    DOS CRLF format. Thanks to ma.darche@free.fr for reporting the
