- InvalidJarIndexException is only available in JDK 1.3.  Referring    to this exception type caused log4j 1.1b5 to break on earlier JDKs.    We now avoid referring to it. [*]
 - Aaron Greenhouse found a series of multi-threading related bugs in
   Category and AsyncAppender. See bug ids 1505 and 1507 in our bug
   database for examplary bug reports. [*]

PR:
Obtained from:
Submitted by:
Reviewed by:

--- a/INSTALL
+++ b/INSTALL
@@ -11,7 +11,7 @@ Using log4j
    number, under PATH_OF_YOUR_CHOICE.
 
 
-3) Add PATH_OF_YOUR_CHOICE\jakarta-log4j-X.X\classes to the CLASSPATH
+3) Add PATH_OF_YOUR_CHOICE\jakarta-log4j-X.X\dist\classes to the CLASSPATH
    variable.
    
 4) You can now test your installation. To do this issue the command:
