--- a/docs/HISTORY
+++ b/docs/HISTORY
@@ -5,6 +5,18 @@
        client code. 
  [***] Changes requiring important modifications to existing client code.
 
+ April 26, 2001
+
+ - Release of version 1.1b6
+ 
+ - InvalidJarIndexException is only available in JDK 1.3.  Referring
+   to this exception type caused log4j 1.1b5 to break on earlier JDKs.
+   We now avoid referring to it. [*]
+
+ - Aaron Greenhouse found a series of multi-threading related bugs in
+   Category and AsyncAppender. See bug ids 1505 and 1507 in our bug
+   database for examplary bug reports. [*]
+  
 
  April 22, 2001
 
