--- a/src/java/org/apache/log4j/test/README
+++ b/src/java/org/apache/log4j/test/README
@@ -6,4 +6,4 @@ you nedd to install the Cygwin tools from
   
    http://sources.redhat.com/cygwin
 
-In case of problems please contact Ceki Gulcu (cgu at freesurf.ch)
+In case of problems send an e-mail note to log4j-dev@jakarta.apache.org.
