--- a/src/share/org/apache/tomcat/resources/LocalStrings_es.properties
+++ b/src/share/org/apache/tomcat/resources/LocalStrings_es.properties
@@ -1,4 +1,4 @@
-# $Id: LocalStrings_es.properties,v 1.15 2001/02/05 00:12:04 nacho Exp $
+# $Id: LocalStrings_es.properties,v 1.16 2001/06/09 00:24:21 costin Exp $
 #
 
 # Localized strings for package org.apache.tomcat.core
@@ -87,46 +87,6 @@ rdi.forward.ise=No puedo reenviar porque este respuesta ya ha estado confiada
 serverResponse.outputStream.ise=getWriter() ha sido ya llamado
 serverResponse.writer.ise=getOutputStream() ha sido ya llamado
 
-sc.100=Continuar
-sc.101=Cambiando Protocolos
-sc.200=OK
-sc.201=Creado
-sc.202=Aceptado
-sc.203=Información No-Autorizativa
-sc.204=Sin Contenido
-sc.205=Reset Contenido
-sc.206=Contenido Parcial
-sc.300=Multiples Elecciones
-sc.301=Movido permanentemente
-sc.302=Movido temporalmente
-sc.303=Mirar Otro
-sc.304=No Modificado
-sc.305=Usar Proxy
-sc.307=Redireccion Temporal
-sc.400=Petición incorrecta
-sc.401=No Autorizado
-sc.402=Pago requerido
-sc.403=Prohibido
-sc.404=No Encontrado
-sc.405=Método No Permitido
-sc.406=No Aceptable
-sc.407=Autentificación Proxy Requerida
-sc.408=Request Caducada
-sc.409=Conflicto
-sc.410=Gone
-sc.411=Longitud Requerida
-sc.412=Precondición Fallada
-sc.413=Entidad de Request Demasiado Grande
-sc.414=Request-URI Demasiado Larga
-sc.415=Tipo de Medio No Soportado
-sc.416=El Rango Pedido No Ser Satisfecho
-sc.417=Expectativa Fallada
-sc.500=Error Interno del Servidor
-sc.501=No Implementado
-sc.502=Gateway Incorrecto
-sc.503=Servicio no Disponible
-sc.504=Gateway Caducada
-sc.505=Versión de HTTP No Soportada
 servletOutputStreamImpl.reset.ise=No puedo reiniciar el buffer después de escribirlo hacia el cliente
 servletOutputStreamImpl.setbuffer.ise=especificando el buffer después de escribirlo al writer
 
@@ -158,10 +118,6 @@ standardSession.setAttribute.ise=setAttribute: Sesión ya invalidada
 
 # Utils
 ascii.parseInit.nfe=error formateando numero {0}
-hexUtil.bad=Dígito hexadecimal incorrecto
-hexUtil.odd=Numero de dígitos hexadecimales incorrecto
-httpDate.pe=formato de fecha no valido: {0}
-httpDate.iae=array demasiado pequeño: {0}
 messageBytes.iae=formato de fecha no valido: {0}
 mimeHeaderField.int.nfe=error formateando numero
 mimeHeaderField.date.iae=formato de fecha no valido
