--- a/src/share/org/apache/tomcat/resources/LocalStrings_fr.properties
+++ b/src/share/org/apache/tomcat/resources/LocalStrings_fr.properties
@@ -1,4 +1,4 @@
-# $Id: LocalStrings_fr.properties,v 1.2 2001/02/16 09:52:31 hgomez Exp $
+# $Id: LocalStrings_fr.properties,v 1.3 2001/06/09 00:24:22 costin Exp $
 #
 
 # Localized strings for package org.apache.tomcat.core
@@ -88,51 +88,6 @@ rdi.forward.ise=Impossible de transférer (forward) car la réponse a déjà été env
 serverResponse.outputStream.ise=getWriter() a déjà été appelé
 serverResponse.writer.ise=getOutputStream() a déjà été appelé
 
-sc.100=Continuer
-sc.101=Changement de Protocols
-sc.200=OK
-sc.201=Crée
-sc.202=Accepté
-sc.203=Information Sans-Autorité
-sc.204=Pas de Contenu
-sc.205=Remise à Zéro de Contenu
-sc.206=Contenu Partiel
-sc.207=Etat Multiple
-sc.300=Choix Multiples
-sc.301=Déplacé de façon Permanente
-sc.302=Déplacé Temporairement
-sc.303=Voir Autre
-sc.304=Non Modifié
-sc.305=Utilisation de Relais
-sc.307=Redirection Temporaire
-sc.400=Mauvaise Requête
-sc.401=Non-Autorisé
-sc.402=Paiement Nécessaire
-sc.403=Interdit
-sc.404=Introuvable
-sc.405=Méthode Non Autorisée
-sc.406=Inacceptable
-sc.407=Authentification de Relais Nécessaire
-sc.408=Dépassement de Délais pour la Requête
-sc.409=Conflit
-sc.410=Parti
-sc.411=Taille Demandée
-sc.412=Echec de Pré-condition
-sc.413=Entité de Requête Trop Grande
-sc.414=URI de Requête Trop Grande
-sc.415=Type de Support Non Supporté
-sc.416=Etendue de Requête Irréalisable
-sc.417=Echec d'Attente
-sc.422=Entité Ingérable
-sc.424=Echec de Dépendance
-sc.500=Erreur Interne de Servlet
-sc.501=Non Implémenté
-sc.502=Mauvaise Passerelle
-sc.503=Service Indisponible
-sc.504=Dépassement de Délais pour la Passerelle
-sc.505=Version HTTP Non Supportée
-sc.507=Stockage Insuffisant
-
 servletOutputStreamImpl.reset.ise=Impossible de remettre à zéro le tampon après écriture vers le client
 servletOutputStreamImpl.setbuffer.ise=Réglage de tampon après écriture vers l''écrivain (writer)
 
@@ -165,10 +120,6 @@ standardSession.setAttribute.ise=setAttribute: Session déjà invalidée
 
 # Utils
 ascii.parseInit.nfe=Erreur de format numérique {0}
-hexUtil.bad=Mauvais digit hexadécimal
-hexUtil.odd=Nombre impair de digits hexadécimaux
-httpDate.pe=Format de date invalide: {0}
-httpDate.iae=Tableau trop petit: {0}
 messageBytes.iae=Format de date invalide: {0}
 mimeHeaderField.int.nfe=Erreur de format numérique
 mimeHeaderField.date.iae=Format de date invalide
