Port updates to Jasper from tomcat_32 branch to main branch

--- a/src/share/org/apache/jasper/resources/messages.properties
+++ b/src/share/org/apache/jasper/resources/messages.properties
@@ -1,4 +1,4 @@
-# $Id: messages.properties,v 1.24 2001/01/14 20:45:40 larryi Exp $
+# $Id: messages.properties,v 1.25 2001/06/11 03:42:29 larryi Exp $
 #
 # Default localized string information
 # Localized this the Default Locale as is en_US
@@ -214,3 +214,4 @@ jsp.error.no.more.content=End of content reached while more parsing required: un
 jsp.error.unterminated.user.tag=Unterminated user-defined tag: ending tag {0} not found or incorrectly nested 
 jsp.error.invalid.javaEncoding=Invalid java encodings. Tried {0} and then {1}. Both failed.
 jsp.error.needAlternateJavaEncoding=Default java encoding {0} is invalid on your java platform. An alternate can be specified via the 'javaEncoding' parameter of JspServlet.
+jsp.error.badcount=Internal error.  Attempted to decrement the reference count for an unreferenced JSP.
