Mention that Jasper34 is available in the build

--- a/src/doc/readme
+++ b/src/doc/readme
@@ -1,4 +1,4 @@
-$Id: readme,v 1.14 2001/06/21 04:52:45 larryi Exp $
+$Id: readme,v 1.15 2001/06/21 22:35:32 larryi Exp $
         
                            Release Notes for:
                            ====================
@@ -190,6 +190,14 @@ most important are:
     </Context>
 
   See conf/server.xml for more information.
+
+- The jakarta-tomcat-jasper project has been created to support refactoring
+  and other improvements for Jasper, called as Jasper34. As a separate
+  project, this development can occur independent of Tomcat 3.x and 4.x.
+  Some preliminary work has been completed and the result is included in the
+  Tomcat 3.3 build and binary distributions.  If you wish to give Jasper34
+  a try, change "<JspInterceptor ...>" to "<JspInterceptor34 ...>" in your
+  server.xml file.
 
 - (more to be added)
 
