--- a/src/share/org/apache/tomcat/resources/LocalStrings_es.properties
+++ b/src/share/org/apache/tomcat/resources/LocalStrings_es.properties
@@ -1,4 +1,4 @@
-# $Id: LocalStrings_es.properties,v 1.16 2001/06/09 00:24:21 costin Exp $
+# $Id: LocalStrings_es.properties,v 1.17 2001/07/10 23:14:25 nacho Exp $
 #
 
 # Localized strings for package org.apache.tomcat.core
@@ -111,6 +111,7 @@ standardSession.getAttributeNames.ise=getAttributeNames: Sesión ya invalidada
 standardSession.getCreationTime.ise=getCreationTime: Sesión ya invalidada
 standardSession.getMaxInactiveInterval.ise=getMaxInactiveInterval: Sesión ya invalidada
 standardSession.getValueNames.ise=getAttributeNames: Sesión ya invalidada
+endpoint.err.nonfatal=El Endpoint {0} a ignorado la excepcion: {1}
 standardSession.removeAttribute.ise=removeAttribute: Sesión ya invalidada
 standardSession.setAttribute.ise=setAttribute: Atributo no serializable
 standardSession.setAttribute.ise=setAttribute: Sesión ya invalidada
